--- a/galaxy/waterfox/.artixlinux/pkgbase.yaml
+++ b/galaxy/waterfox/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: waterfox
-  version: 6.5.6-1
+  version: 6.5.7-2
   arch:
     - x86_64
   pkgname:
     - waterfox
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -47,9 +47,10 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 6.5.6-1
+    version: 6.5.7-1.1
     packages:
-      - waterfox-6.5.6-1-x86_64.pkg.tar.zst
+      - waterfox-6.5.7-1.1-x86_64.pkg.tar.zst
+  galaxy:
+    version: 6.5.7-2
+    packages:
+      - waterfox-6.5.7-2-x86_64.pkg.tar.zst
