--- a/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
+++ b/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: telegram-desktop
-  version: 5.13.1-3
+  version: 5.13.1-4
   arch:
     - x86_64
   pkgname:
     - telegram-desktop
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 5.13.1-3
+    version: 5.13.1-4
     packages:
-      - telegram-desktop-5.13.1-3-x86_64.pkg.tar.zst
+      - telegram-desktop-5.13.1-4-x86_64.pkg.tar.zst
 team: galaxy
