Updated artix-checkupdates - 0.10.8-2

--- a/world/artix-checkupdates/PKGBUILD
+++ b/world/artix-checkupdates/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Dudemanguy <dudemanguy@artixlinux.org
 
 pkgname=artix-checkupdates
-pkgver=0.10.7
-pkgrel=1.1
+pkgver=0.10.8
+pkgrel=2
 pkgdesc="Tool to check on updates between Artix and Arch"
 arch=(x86_64)
 url="https://gitea.artixlinux.org/artix/artix-checkupdates"
@@ -21,10 +21,10 @@ depends=(
 makedepends=('git')
 backup=('etc/artix-checkupdates/config')
 source=("git+${url}.git#tag=${pkgver}")
-b2sums=('8cd7ea222d4e79dcec77201c7f84ab581e4ec8bd68b50ae6a44c405aa72ea1f815968541614f1120b0a031ec442103b9a455ba216cda4203f6f394b771ec80b3')
+b2sums=('5745a412790eddb10ae674b0d4d15f2221cd4a59400f6eaeb7635d75e289df2a0a6eb4cdeaf3015aca27270c87bd776edaeb5e3cb9eeb88f892fbd2f48197a53')
 
 build() {
-  cd "$pkgname" || exit
+  cd "$pkgname"
   make
 }
 
