--- a/world/apache/.artixlinux/pkgbase.yaml
+++ b/world/apache/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: apache
-  version: 2.4.63-2
+  version: 2.4.63-3
   arch:
     - x86_64
   pkgname:
     - apache
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.4.63-2
+    version: 2.4.63-3
     packages:
-      - apache-2.4.63-2-x86_64.pkg.tar.zst
+      - apache-2.4.63-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
