--- a/galaxy/libtg_owt/.artixlinux/pkgbase.yaml
+++ b/galaxy/libtg_owt/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libtg_owt
-  version: 0.git28.be39b8c-3
+  version: 0.git29.c4192e8-1
   arch:
     - x86_64
   pkgname:
     - libtg_owt
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.git28.be39b8c-3
+    version: 0.git29.c4192e8-1
     packages:
-      - libtg_owt-0.git28.be39b8c-3-x86_64.pkg.tar.zst
+      - libtg_owt-0.git29.c4192e8-1-x86_64.pkg.tar.zst
 team: galaxy
