--- a/world/vim/.artixlinux/pkgbase.yaml
+++ b/world/vim/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: vim
-  version: 9.1.1337-1
+  version: 9.1.1362-1
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - vim-runtime
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,11 +33,11 @@ repos:
     version: null
     packages: []
   world:
-    version: 9.1.1337-1
+    version: 9.1.1362-1
     packages:
-      - vim-9.1.1337-1-x86_64.pkg.tar.zst
-      - gvim-9.1.1337-1-x86_64.pkg.tar.zst
-      - vim-runtime-9.1.1337-1-x86_64.pkg.tar.zst
+      - vim-9.1.1362-1-x86_64.pkg.tar.zst
+      - gvim-9.1.1362-1-x86_64.pkg.tar.zst
+      - vim-runtime-9.1.1362-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
