--- a/world/knot/PKGBUILD
+++ b/world/knot/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Otto Sabart <seberm[at]gmail[dot]com>
 
 pkgname=knot
-pkgver=3.4.5
+pkgver=3.4.6
 pkgrel=1
 pkgdesc="High-performance authoritative-only DNS server"
 arch=(x86_64)
@@ -15,15 +15,19 @@ depends=(libedit gnutls liburcu lmdb
          libidn2 libcap-ng
          fstrm protobuf-c libmaxminddb
          libbpf libxdp libnghttp2 libmnl)
-makedepends=(python-sphinx)
+makedepends=(git python-sphinx)
 backup=('etc/knot/knot.conf')
-source=("https://secure.nic.cz/files/knot-dns/${pkgname}-${pkgver}.tar.xz"{,.asc})
-sha256sums=('359af70afafa7ccaa18439a7c1eb35270ff9eece81d0756ae4ca716b1433cb4b'
-            'SKIP')
+source=("git+https://gitlab.nic.cz/knot/knot-dns.git#tag=v${pkgver}?signed")
+sha256sums=('79521afb1a33a66f0c5db157c6ab1fb7d2cb1eb07d9dd93ec99379e26efa1681')
 validpgpkeys=(742FA4E95829B6C5EAC6B85710BB7AF6FEBBD6AB) # Daniel Salzman <daniel.salzman@nic.cz>
 
+prepare() {
+    cd ${pkgname}-dns
+    autoreconf -fiv
+}
+
 build() {
-    cd ${pkgname}-${pkgver}
+    cd ${pkgname}-dns
 
     ./configure \
         --prefix=/usr \
@@ -41,12 +45,12 @@ build() {
 }
 
 check() {
-    cd ${pkgname}-${pkgver}
+    cd ${pkgname}-dns
     make check
 }
 
 package() {
-    cd ${pkgname}-${pkgver}
+    cd ${pkgname}-dns
 
     make DESTDIR="${pkgdir}" install
 
