--- a/world/libxkbcommon/.artixlinux/pkgbase.yaml
+++ b/world/libxkbcommon/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libxkbcommon
-  version: 1.9.0-1
+  version: 1.9.1-1
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - libxkbcommon-doc
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,11 +33,11 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.9.0-1
+    version: 1.9.1-1
     packages:
-      - libxkbcommon-1.9.0-1-x86_64.pkg.tar.zst
-      - libxkbcommon-x11-1.9.0-1-x86_64.pkg.tar.zst
-      - libxkbcommon-doc-1.9.0-1-x86_64.pkg.tar.zst
+      - libxkbcommon-1.9.1-1-x86_64.pkg.tar.zst
+      - libxkbcommon-x11-1.9.1-1-x86_64.pkg.tar.zst
+      - libxkbcommon-doc-1.9.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
