--- a/world/rabbitmq/PKGBUILD
+++ b/world/rabbitmq/PKGBUILD
@@ -14,7 +14,7 @@ pkgname=(
   rabbitmqadmin
 )
 pkgver=4.1.0
-pkgrel=2
+pkgrel=3
 pkgdesc='Highly reliable and performant enterprise messaging implementation of AMQP written in Erlang/OTP'
 url='https://rabbitmq.com'
 arch=('any')
@@ -50,7 +50,7 @@ makedepends=(
 )
 _commit=293a4f665ac59c6d53732a18340a76e69c257ea8
 source=(
-  "git+https://github.com/rabbitmq/rabbitmq-server.git#commit=${_commit}?signed"
+  "git+https://github.com/rabbitmq/rabbitmq-server.git#commit=${_commit}"
   rabbitmq-devendor-rebar3.patch
   rabbitmq-env.conf
   rabbitmq.sysusers
@@ -181,7 +181,7 @@ package_rabbitmq() {
     rabbitmqctl
     vmware-rabbitmq
   )
-  for script in ${scripts}; do
+  for script in "${scripts[@]}"; do
     ln -vs /usr/lib/rabbitmq/bin/rabbitmq-script-wrapper "${pkgdir}/usr/bin/${script}"
   done
 
