--- a/world/rabbitmq/.artixlinux/pkgbase.yaml
+++ b/world/rabbitmq/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: rabbitmq
-  version: 4.1.0-2
+  version: 4.1.0-3
   arch:
     - any
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - rabbitmqadmin
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.1.0-2
+    version: 4.1.0-3
     packages:
-      - rabbitmq-4.1.0-2-any.pkg.tar.zst
-      - rabbitmqadmin-4.1.0-2-any.pkg.tar.zst
+      - rabbitmq-4.1.0-3-any.pkg.tar.zst
+      - rabbitmqadmin-4.1.0-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
