--- a/world/smartmontools/.artixlinux/pkgbase.yaml
+++ b/world/smartmontools/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: smartmontools
-  version: 7.4-2.1
+  version: 7.5-1
   arch:
     - x86_64
   pkgname:
     - smartmontools
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 7.4-2.1
+    version: 7.5-1
     packages:
-      - smartmontools-7.4-2.1-x86_64.pkg.tar.zst
+      - smartmontools-7.5-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
