--- a/lib32/lib32-libxkbcommon/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-libxkbcommon/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: lib32-libxkbcommon
-  version: 1.9.0-1
+  version: 1.9.1-1
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - lib32-libxkbcommon-x11
 actions:
   addRepo: lib32
-  removeRepo: lib32-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -41,10 +41,10 @@ repos:
     version: null
     packages: []
   lib32:
-    version: 1.9.0-1
+    version: 1.9.1-1
     packages:
-      - lib32-libxkbcommon-1.9.0-1-x86_64.pkg.tar.zst
-      - lib32-libxkbcommon-x11-1.9.0-1-x86_64.pkg.tar.zst
+      - lib32-libxkbcommon-1.9.1-1-x86_64.pkg.tar.zst
+      - lib32-libxkbcommon-x11-1.9.1-1-x86_64.pkg.tar.zst
   galaxy-goblins:
     version: null
     packages: []
