--- a/system/openrc/PKGBUILD
+++ b/system/openrc/PKGBUILD
@@ -3,12 +3,12 @@
 # Contributor: williamh <williamh@gentoo.org>
 
 _url=https://gitea.artixlinux.org/artix
-_extra=1.2
+_extra=1.3
 _alpm=2.2
 
 pkgname=openrc
-pkgver=0.61
-pkgrel=3
+pkgver=0.62.2
+pkgrel=1
 pkgdesc="OpenRC is a dependency-based init system that works with the system-provided init program"
 arch=('x86_64')
 url="https://github.com/OpenRC/openrc"
@@ -63,19 +63,21 @@ source=(
     'openrc.logrotate'
     'sysctl.conf'
     'openrc-user.pam'
-    "openrc-rc-conf-artix.patch" #::${_url}/openrc/commit/6f9e4c6b4bebebad2f00d1c19bf1f93c707d9a09.patch"
-    "openrc-artix-meson.patch" #::${_url}/openrc/commit/05b1fd974c71041265a862ca3a2ba4fc79e797cc.patch"
+    "openrc-rc-conf-artix.patch"
+    "openrc-artix-meson.patch"
     "git+${_url}/openrc-extra.git#tag=${_extra}"
     "git+${_url}/alpm-hooks.git#tag=${_alpm}"
+    "openrc-agetty-meson-conf-d.patch::https://github.com/OpenRC/openrc/pull/850/commits/e3961a81809ed8d0e594402b012ee685e4ad970f.patch"
 )
-sha256sums=('b2b7899bb9ef5d426c7537a9fdb1d3ca8cd0e029b7e2c92a23201c603a62e40d'
+sha256sums=('510dab44b0a6dcc80dda3372b3de7d2031657ddbb1195bc9630743636e59244f'
             '0b44210db9770588bd491cd6c0ac9412d99124c6be4c9d3f7d31ec8746072f5c'
             '874e50bd217fef3a2e3d0a18eb316b9b3ddb109b93f3cbf45407170c5bec1d6d'
             '5b6a7ceb46f057581dcdce76794c045b711ff2a8f063ced0dba682697da9ef06'
             '1f6f7a11e6937a1c9d23959e4bf4a6b04937f955a21e4e0e5be9e9e480835bcd'
-            'd910a8084ca8fab5d4e28c888d3f424c0ec51ac947c2e385722a8806b781da61'
-            '88c2ddad5ac5d347962ce9805a0ed7a4f1737aaafa3d6a8c0a7a55009ce5fef1'
-            'f29110a8222b2d67a31918869ae8261bdf35d3404cd1effbb3f9fcfa97cdbb25')
+            '0cb9b79b2e044c3641b20ec701a396dd5575bb5b1c48586ab57de9c2b7d24308'
+            'e83f678c3e3d03067d0e5602bad82382cf74c8dc4fd7a1c18f3a3ceb3a21f0be'
+            'f29110a8222b2d67a31918869ae8261bdf35d3404cd1effbb3f9fcfa97cdbb25'
+            '0a2aead8c5257cca191e8a3a57c080d4deb4ba5fae89df4709843584eef53534')
 
 prepare() {
     cd "${pkgname}"
