--- a/galaxy/waterfox/.artixlinux/pkgbase.yaml
+++ b/galaxy/waterfox/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: waterfox
-  version: 6.5.7-2
+  version: 6.5.7-2.1
   arch:
     - x86_64
   pkgname:
     - waterfox
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -47,10 +47,9 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: 6.5.7-1.1
-    packages:
-      - waterfox-6.5.7-1.1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   galaxy:
-    version: 6.5.7-2
+    version: 6.5.7-2.1
     packages:
-      - waterfox-6.5.7-2-x86_64.pkg.tar.zst
+      - waterfox-6.5.7-2.1-x86_64.pkg.tar.zst
