--- a/world/ruby-mime-types/.artixlinux/pkgbase.yaml
+++ b/world/ruby-mime-types/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-mime-types
-  version: 3.6.1-3
+  version: 3.6.2-1
   arch:
     - any
   pkgname:
     - ruby-mime-types
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.6.1-3
+    version: 3.6.2-1
     packages:
-      - ruby-mime-types-3.6.1-3-any.pkg.tar.zst
+      - ruby-mime-types-3.6.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
