--- a/world/ruby-protocol-rack/.artixlinux/pkgbase.yaml
+++ b/world/ruby-protocol-rack/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-protocol-rack
-  version: 0.11.1-3
+  version: 0.12.0-1
   arch:
     - any
   pkgname:
     - ruby-protocol-rack
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.11.1-3
+    version: 0.12.0-1
     packages:
-      - ruby-protocol-rack-0.11.1-3-any.pkg.tar.zst
+      - ruby-protocol-rack-0.12.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
