--- a/world/artools/.artixlinux/pkgbase.yaml
+++ b/world/artools/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: artools
-  version: 0.35.0-1
-  arch:
-    - any
-  pkgname:
-    - artools-base
-    - artools-pkg
-    - artools-iso
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.35.0-1
+    version: 0.36.0-1
     packages:
-      - artools-base-0.35.0-1-any.pkg.tar.zst
-      - artools-pkg-0.35.0-1-any.pkg.tar.zst
-      - artools-iso-0.35.0-1-any.pkg.tar.zst
+      - artools-base-0.36.0-1-any.pkg.tar.zst
+      - artools-pkg-0.36.0-1-any.pkg.tar.zst
+      - artools-iso-0.36.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
