--- a/world/python-hatch-fancy-pypi-readme/.artixlinux/pkgbase.yaml
+++ b/world/python-hatch-fancy-pypi-readme/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: python-hatch-fancy-pypi-readme
-  version: 24.1.0-4
-  arch:
-    - any
-  pkgname:
-    - python-hatch-fancy-pypi-readme
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 24.1.0-4
+    version: 25.1.0-1
     packages:
-      - python-hatch-fancy-pypi-readme-24.1.0-4-any.pkg.tar.zst
+      - python-hatch-fancy-pypi-readme-25.1.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
