--- a/world/python-trove-classifiers/.artixlinux/pkgbase.yaml
+++ b/world/python-trove-classifiers/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: python-trove-classifiers
-  version: 2025.4.11.15-1
-  arch:
-    - any
-  pkgname:
-    - python-trove-classifiers
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2025.4.11.15-1
+    version: 2025.4.28.22-1
     packages:
-      - python-trove-classifiers-2025.4.11.15-1-any.pkg.tar.zst
+      - python-trove-classifiers-2025.4.28.22-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
