--- a/world/artools/.artixlinux/pkgbase.yaml
+++ b/world/artools/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,11 +29,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 0.36.0-1
+    version: 0.36.0-2
     packages:
-      - artools-base-0.36.0-1-any.pkg.tar.zst
-      - artools-pkg-0.36.0-1-any.pkg.tar.zst
-      - artools-iso-0.36.0-1-any.pkg.tar.zst
+      - artools-base-0.36.0-2-any.pkg.tar.zst
+      - artools-pkg-0.36.0-2-any.pkg.tar.zst
+      - artools-iso-0.36.0-2-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
