--- a/world/papirus-icon-theme/.artixlinux/pkgbase.yaml
+++ b/world/papirus-icon-theme/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: papirus-icon-theme
-  version: 20250201-1
-  arch:
-    - any
-  pkgname:
-    - papirus-icon-theme
-    - epapirus-icon-theme
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 20250201-1
+    version: 20250501-1
     packages:
-      - papirus-icon-theme-20250201-1-any.pkg.tar.zst
-      - epapirus-icon-theme-20250201-1-any.pkg.tar.zst
+      - papirus-icon-theme-20250501-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
