Updated archlinux-mirrorlist - 20250503-1

--- a/galaxy/archlinux-mirrorlist/.artixlinux/pkgbase.yaml
+++ b/galaxy/archlinux-mirrorlist/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: archlinux-mirrorlist
-  version: 20250311-1
-  arch:
-    - any
-  pkgname:
-    - archlinux-mirrorlist
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 20250311-1
+    version: 20250503-1
     packages:
-      - archlinux-mirrorlist-20250311-1-any.pkg.tar.zst
+      - archlinux-mirrorlist-20250503-1-any.pkg.tar.zst
+    debug: []
 team: galaxy
