--- a/system/bash/PKGBUILD
+++ b/system/bash/PKGBUILD
@@ -9,7 +9,7 @@ pkgname=bash
 _basever=5.2
 _patchlevel=037
 pkgver=${_basever}.${_patchlevel}
-pkgrel=2
+pkgrel=3
 pkgdesc='The GNU Bourne Again shell'
 arch=(x86_64)
 license=('GPL-3.0-or-later')
@@ -32,7 +32,9 @@ source=(
   bash-5.2_p15-random-ub.patch
   bash-5.2_p21-wpointer-to-int.patch
   bash-5.2_p32-memory-leaks.patch
-  bash-5.2_p32-read-delimiter-in-invalid-mbchar.patch
+  bash-5.2_p32-erroneous-delimiter-pushback-condition.patch
+  bash-5.2_p32-invalid-continuation-byte-ignored-as-delimiter-1.patch
+  bash-5.2_p32-invalid-continuation-byte-ignored-as-delimiter-2.patch
   dot.bashrc
   dot.bash_profile
   dot.bash_logout
@@ -52,7 +54,9 @@ b2sums=('51b196e710794ebad8eac28c31c93eb99ac1a7db30919a13271e39e1cb66a0672f242df
         'adab09c3f2ce3697e3659e01266120155714b80263bd125808edf556a354291af615540189553b1c32a2d462ac41e28a9df8fb9f7d963a3ca3629d297a46e62d'
         '0c7f5eb5b697abf15c1d17888a973e44d0ead1f095778b41841a6a1937a5b9e7ce5fa6a05e4404504990b0a244fdecfc12ce7c33ee7d67b4c837435e9bfe2b57'
         '373aa3be1f0a6bc65403cde63cbc4dcd612336e86b1cae918670a99e8ca639c665ac7efb467ec8823a62cec0a71c485bd3fda4bbf058d759498377f5cfe90f51'
-        'ab7fe139630be59b26a72f92f22e4a2b556594d341d82b0f15f99880724f5ea5cfd912a8de6b6e1db902c14d65395c74a03379e3e01ce69bb4512c681518301d'
+        'db1a2a7bc82e3e5dd8478ab5c52e7c630bf818ee9e09f6df34c34091426da21b5bb1727c892084a0b49733ad4be699d51c164019e7f87c6a67406553061509d9'
+        'c6e48a37c88ab4d361eab3c375de13d837b79755b53cb46aea2f16ce664d6dfd024c2fdb228031e74444891ac70806f0851863fdce02b5dd28f6e7e447137fb7'
+        'c838aa2e64342ad975fd2e1782f0026ba36011996cfd080b013aec820eb5f5770e5b9b4b9149677c6d78182cd0498f229207e0ce120f998a15f6f638e1b57d0b'
         '93e55e4e1b7e133c0d03733121bb12ba9c64230ff328280ac68a5d1fca0f83637159c0861bca0c30eda61ca14d5a319cd38424959e84344e188c0349cd159ba7'
         '2d53f99e485218ed47f2e40907023645594ac8ffcf00d0569050d54a8f4dabe0a2bdcab515a45b663283c2e6299d805b923ea7b7b789c6a4150c37a98a5b117c'
         'dbfe5c1aaea94419305c1f8c9b54b94eab515260910f2309360ff702a27032faa34514e70b31adbb1e41bd912d4e43a610939cb07565f43e05dd19813a81752e'
@@ -145,7 +149,9 @@ prepare() {
   patch -Np0 -i ../bash-5.2_p15-random-ub.patch
   patch -Np0 -i ../bash-5.2_p21-wpointer-to-int.patch
   patch -Np0 -i ../bash-5.2_p32-memory-leaks.patch
-  patch -Np0 -i ../bash-5.2_p32-read-delimiter-in-invalid-mbchar.patch
+  patch -Np0 -i ../bash-5.2_p32-invalid-continuation-byte-ignored-as-delimiter-1.patch
+  patch -Np0 -i ../bash-5.2_p32-invalid-continuation-byte-ignored-as-delimiter-2.patch
+  patch -Np0 -i ../bash-5.2_p32-erroneous-delimiter-pushback-condition.patch
 }
 
 build() {
@@ -155,7 +161,8 @@ build() {
                -DSTANDARD_UTILS_PATH=\'\"/usr/bin\"\'
                -DSYS_BASHRC=\'\"/etc/bash/bashrc\"\'
                -DSYS_BASH_LOGOUT=\'\"/etc/bash/bash_logout\"\'
-               -DNON_INTERACTIVE_LOGIN_SHELLS)
+               -DNON_INTERACTIVE_LOGIN_SHELLS
+               -std=gnu17)
   export CFLAGS="${CFLAGS} ${_bashconfig[@]}"
 
   ./configure \
