--- a/world/sfml/PKGBUILD
+++ b/world/sfml/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Ondrej Martinak <omartinak@gmail.com>
 
 pkgname=sfml
-pkgver=3.0.0
-pkgrel=2
+pkgver=3.0.1
+pkgrel=1
 pkgdesc='A simple, fast, cross-platform, and object-oriented multimedia API'
 arch=('x86_64')
 url='http://www.sfml-dev.org/'
@@ -13,7 +13,7 @@ makedepends=('mesa' 'cmake' 'doxygen' 'udev' 'ninja')
 provides=('libsfml-window.so' 'libsfml-network.so' 'libsfml-system.so'
           'libsfml-audio.so' 'libsfml-graphics.so')
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/SFML/SFML/archive/${pkgver}.tar.gz)
-sha512sums=('116b934950b02639aa0924cdf6ceaf34518be7f94037e77e52f374aa0a03403487ef58384137569d930961c7d65291a7f0bbddcf1eaf4260086f49afbfae1f27')
+sha512sums=('cee56eef93728aef9b361f8b1080572532ce5247c80a9d1be53b30dab4d67e8588316890555d4c4ba423e87b09f954327d70615e1ba72d458d8238fa84e589f9')
 
 build() {
   export CXXFLAGS+=" -ffat-lto-objects"
@@ -27,6 +27,7 @@ build() {
     -DSFML_USE_SYSTEM_DEPS=ON \
     -DSFML_BUILD_EXAMPLES=ON \
     -DSFML_BUILD_DOC=ON \
+    -DSFML_PKGCONFIG_INSTALL_DIR=/usr/lib/pkgconfig \
     -DSFML_INSTALL_PKGCONFIG_FILES=ON
   ninja -C build
   ninja -C build doc
