--- a/galaxy/anubis/.artixlinux/pkgbase.yaml
+++ b/galaxy/anubis/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: galaxy
 actions:
   addRepo: galaxy
-  removeRepo: world
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -54,7 +54,7 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 1.17.0-1
+    version: 1.17.1-3
     packages:
-      - anubis-1.17.0-1-x86_64.pkg.tar.zst
+      - anubis-1.17.1-3-x86_64.pkg.tar.zst
     debug: []
