--- a/world/zxing-cpp/PKGBUILD
+++ b/world/zxing-cpp/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=zxing-cpp
 pkgver=2.3.0
-pkgrel=4
+pkgrel=5
 pkgdesc='An open-source, multi-format linear/matrix barcode image processing library implemented in C++'
 arch=(x86_64)
 url='https://github.com/zxing-cpp/zxing-cpp'
@@ -26,7 +26,7 @@ build() {
   cmake -B build -S $pkgname \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=None \
-    -DZXING_EXAMPLES=OFF \
+    -DZXING_EXAMPLES=ON \
     -DZXING_UNIT_TESTS=ON \
     -DZXING_C_API=ON
   cmake --build build
