Updated vulkan-headers - 1:1.4.313.0-1

--- a/world/vulkan-headers/.nvchecker.toml
+++ b/world/vulkan-headers/.nvchecker.toml
@@ -1,6 +1,5 @@
 [vulkan-headers]
-source = "github"
-github = "KhronosGroup/Vulkan-Headers"
-use_max_tag = true
+source = "git"
+git = "https://github.com/KhronosGroup/Vulkan-Headers.git"
 include_regex = 'vulkan-sdk-\d+(\.\d+)*'
 prefix = "vulkan-sdk-"
