Updated vulkan-icd-loader - 1.4.313.0-1

--- a/world/vulkan-icd-loader/.nvchecker.toml
+++ b/world/vulkan-icd-loader/.nvchecker.toml
@@ -1,6 +1,5 @@
 [vulkan-icd-loader]
-source = "github"
-github = "KhronosGroup/Vulkan-Loader"
-use_max_tag = true
+source = "git"
+git = "https://github.com/KhronosGroup/Vulkan-Loader.git"
 include_regex = 'vulkan-sdk-\d+(\.\d+)*'
 prefix = "vulkan-sdk-"
