--- a/galaxy/fvwm3/.artixlinux/pkgbase.yaml
+++ b/galaxy/fvwm3/.artixlinux/pkgbase.yaml
@@ -1,14 +1,7 @@
 ---
 team: galaxy
-pkgbase:
-  name: fvwm3
-  version: 1.1.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - fvwm3
 actions:
-  addRepo: galaxy
+  addRepo: galaxy-gremlins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -19,37 +12,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
-    version: null
-    packages: []
+    version: 1.1.2-1
+    packages:
+      - fvwm3-1.1.2-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy:
     version: 1.1.2-1
     packages:
       - fvwm3-1.1.2-1-x86_64.pkg.tar.zst
+    debug: []
