Updated ruby-rubyzip - 2.4.1-1

--- a/world/ruby-rubyzip/.nvchecker.toml
+++ b/world/ruby-rubyzip/.nvchecker.toml
@@ -2,4 +2,4 @@
 source = "git"
 git = "https://github.com/rubyzip/rubyzip.git"
 prefix = "v"
-exclude_regex = "v[0-9]+\\.[0-9]+\\.[0-9]+\\.alpha"
+exclude_regex = "v[0-9]+\\.[0-9]+\\.[0-9]+\\.(alpha|rc[0-9]+)"
